# sample-ai-coding-standards-template

./: .markdownlint.yaml  .pre-commit-config.yaml  .semgrep.yml  CHANGELOG.md  README.md  Taskfile.yml  pyproject.toml
.ash/: ash.yaml
hooks/: architecture-decision-record.hook
mcp/: mcp.json
rules/: adr.md
template/: README.md  cookiecutter.json
template/hooks/: post_gen_project.py  pre_gen_project.py
template/{{cookiecutter.project_name}}/: .markdownlint.yaml  .pre-commit-config.yaml  README.md  Taskfile.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
template/{{cookiecutter.project_name}}/.amazonq/rules/: project_structure.md
template/{{cookiecutter.project_name}}/.cline/rules/: aws.md  taskfile.md  test.md
template/{{cookiecutter.project_name}}/.cursor/rules/: blog.md  general.md  python.md
template/{{cookiecutter.project_name}}/.kiro/hooks/: design-pattern-analyzer.kiro.hook  product-requirement-documentation.hook  spec-analyzer.kiro.hook
template/{{cookiecutter.project_name}}/.kiro/steering/: kiro.md
template/{{cookiecutter.project_name}}/.roocode/: mcp.json
template/{{cookiecutter.project_name}}/.roocode/rules/: architecture.md  cdk.md  doc.md
template/{{cookiecutter.project_name}}/docs/: .env.example  PRD.md  README.md  Taskfile.yml  index.md  requirements.txt
template/{{cookiecutter.project_name}}/docs/assets/css/: custom.css
template/{{cookiecutter.project_name}}/docs/assets/images/: .gitkeep
template/{{cookiecutter.project_name}}/docs/assets/js/: custom.js
template/{{cookiecutter.project_name}}/docs/reference/: infrastructure.md
template/{{cookiecutter.project_name}}/docs/reference/functions/: handlers.md
template/{{cookiecutter.project_name}}/docs/reference/shared/: adapters.md  ports.md
template/{{cookiecutter.project_name}}/docs/reference/shared/domain/: models.md  services.md
template/{{cookiecutter.project_name}}/docs/reference/tests/: integration.md  utils.md
template/{{cookiecutter.project_name}}/infrastructure/: Taskfile.yml  __init__.py  app.py  cdk.json  config.py  config_path.py  lambda_factory.py
template/{{cookiecutter.project_name}}/infrastructure/scripts/: __init__.py  lambda_build.py
template/{{cookiecutter.project_name}}/infrastructure/stacks/: __init__.py  hello_world_stack.py
template/{{cookiecutter.project_name}}/scripts/: cruft_resolver.sh
template/{{cookiecutter.project_name}}/src/: __init__.py
template/{{cookiecutter.project_name}}/src/functions/hello_world/: __init__.py  handler.py  requirements.txt
template/{{cookiecutter.project_name}}/src/shared/: requirements.txt  setup.py
template/{{cookiecutter.project_name}}/src/shared/adapters/: hello_world_storage_adapter.py
template/{{cookiecutter.project_name}}/src/shared/config/: config.py  config_path.py  config_service.py
template/{{cookiecutter.project_name}}/src/shared/domain/services/: hello_world_service.py
template/{{cookiecutter.project_name}}/src/shared/models/: __init__.py  hello_world_model.py
template/{{cookiecutter.project_name}}/src/shared/ports/: __init__.py  hello_world_port.py
template/{{cookiecutter.project_name}}/src/tests/: Taskfile.yml  conftest.py  requirements.txt  test_config.py
template/{{cookiecutter.project_name}}/src/tests/integration/: test_hello_world_model.py
template/{{cookiecutter.project_name}}/src/tests/integration/adapters/: test_hello_world_storage_adapter.py
template/{{cookiecutter.project_name}}/src/tests/integration/functions/: __init__.py  test_hello_world_handler.py
template/{{cookiecutter.project_name}}/src/tests/integration/services/: test_hello_world_service.py
template/{{cookiecutter.project_name}}/src/tests/payloads/hello_world/: event.json
template/{{cookiecutter.project_name}}/src/tests/utils/: lambda_utils.py  resource_discovery.py
